# reindexer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  flake.nix  justfile  regen.sh
.config/: nextest.toml
.github/workflows/: build.yml  container.yml  rust.yml
go/: cometbft.go  go.mod  go.sum  hello.go
go/store/: store.go
src/: check.rs  cometbft.rs  command.rs  files.rs  history.rs  indexer.rs  lib.rs  main.rs  penumbra.rs  storage.rs  tendermint_compat.rs
src/cometbft/: remote.rs
src/command/: archive.rs  bootstrap.rs  check.rs  export.rs  regen.rs  regen_auto.rs  regen_step.rs
src/history/: node.rs  reindexer.rs
src/indexer/: schema.sql
src/penumbra/: v0o79.rs  v0o80.rs  v0o81.rs  v1o3.rs  v1o4.rs  v2.rs
test_data/: genesis.json
tests/: file.rs  network_integration.rs  penumbra_1.rs  penumbra_testnet_phobos_2.rs  penumbra_testnet_phobos_3.rs
tests/common/: mod.rs
tools/: regen.sh
