[package]
name = "penumbra-reindexer"
authors = ["Penumbra Labs <team@penumbralabs.xyz"]
description = "A reindexing tool for Penumbra ABCI event data"
homepage = "https://penumbra.zone"
repository = "https://github.com/penumbra-zone/reindexer"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
network-integration = []
expensive-tests = []
download-archives = []

[dependencies]
anyhow = "1"
async-trait = "0.1.81"
clap = { version = "4", features = ["derive"] }
directories = "5.0.1"
hex = "0.4.3"
ibc-types = "0.12.0"
penumbra-proto = { git = "https://github.com/penumbra-zone/penumbra", features = ["tendermint"], tag = "v0.80.6" }
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite", "postgres"] }
tendermint-proto = { version = "0.40.1", default-features = false }
tendermint_v0o34 = { package = "tendermint", version = "0.34.0", default-features = false }
tendermint_v0o40 = { package = "tendermint", version = "0.40.1", default-features = false }
tokio = { version = "1.39.3", features = ["rt"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Namespaced Penumbra versions, so migration modules can run the correct logic for different parts of
# historical chain state. See docs at https://github.com/penumbra-zone/penumbra/blob/main/COMPATIBILITY.md
# v0.79 dependencies; APP_VERSION 7
cnidarium-v0o79 = { package = "cnidarium", git = "https://github.com/penumbra-zone/penumbra", rev = "2e8223a6511fcbeb9c8a8f177ff6f4bfa505ada1" }
penumbra-app-v0o79 = { package = "penumbra-app", git = "https://github.com/penumbra-zone/penumbra", rev = "2e8223a6511fcbeb9c8a8f177ff6f4bfa505ada1" }
penumbra-ibc-v0o79 = { package = "penumbra-ibc", git = "https://github.com/penumbra-zone/penumbra", rev = "2e8223a6511fcbeb9c8a8f177ff6f4bfa505ada1" }
# v0.80 dependencies; APP_VERSION 8
cnidarium-v0o80 = { package = "cnidarium", git = "https://github.com/penumbra-zone/penumbra", rev = "4f81e91cc8b8351fc002ca55def5eb04a91784d4" }
penumbra-app-v0o80 = { package = "penumbra-app", git = "https://github.com/penumbra-zone/penumbra", rev = "4f81e91cc8b8351fc002ca55def5eb04a91784d4" }
penumbra-governance-v0o80 = { package = "penumbra-governance", git = "https://github.com/penumbra-zone/penumbra", rev = "4f81e91cc8b8351fc002ca55def5eb04a91784d4" }
penumbra-ibc-v0o80 = { package = "penumbra-ibc", git = "https://github.com/penumbra-zone/penumbra", rev = "4f81e91cc8b8351fc002ca55def5eb04a91784d4" }
penumbra-sct-v0o80 = { package = "penumbra-sct", git = "https://github.com/penumbra-zone/penumbra", rev = "4f81e91cc8b8351fc002ca55def5eb04a91784d4" }
penumbra-transaction-v0o80 = { package = "penumbra-transaction", git = "https://github.com/penumbra-zone/penumbra", rev = "4f81e91cc8b8351fc002ca55def5eb04a91784d4" }
# v1.x dependencies; also APP_VERSION 9
cnidarium-v1 = { package = "cnidarium", version = "0.83.0" }
penumbra-sdk-app-v1 = { package = "penumbra-sdk-app", git = "https://github.com/penumbra-zone/penumbra", rev = "3f241c8e3cbd59eb21c0cf3ac402795185156a63" }
penumbra-sdk-governance-v1 = { package = "penumbra-sdk-governance", git = "https://github.com/penumbra-zone/penumbra", rev = "3f241c8e3cbd59eb21c0cf3ac402795185156a63" }
penumbra-sdk-ibc-v1 = { package = "penumbra-sdk-ibc", git = "https://github.com/penumbra-zone/penumbra", rev = "3f241c8e3cbd59eb21c0cf3ac402795185156a63" }
penumbra-sdk-sct-v1 = { package = "penumbra-sdk-sct", git = "https://github.com/penumbra-zone/penumbra", rev = "3f241c8e3cbd59eb21c0cf3ac402795185156a63" }
penumbra-sdk-transaction-v1 = { package = "penumbra-sdk-transaction", git = "https://github.com/penumbra-zone/penumbra", rev = "3f241c8e3cbd59eb21c0cf3ac402795185156a63" }

sha2 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.7", default-features = false }
prost = "0.13"


# In debug builds, nonetheless compile dependencies in release mode, for performance.
#
# The penumbra deps in particular are quit slow in debug mode, but this lets us iterate
# on the code in this crate more rapidly.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
assert_cmd = "2.0.16"
escargot = "0.5.13"
flate2 = "1.0.35"
picturesque = { git = "https://github.com/penumbra-zone/penumbra", branch = "cronokirby/picturesque" }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tar = "0.4.43"
tokio-stream = "0.1.17"
url = "2.5.4"
