[package]
name = "penumbra-reindexer"
authors = ["Penumbra Labs <team@penumbralabs.xyz"]
description = "A reindexing tool for Penumbra ABCI event data"
homepage = "https://penumbra.zone"
repository = "https://github.com/penumbra-zone/reindexer"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
network-integration = []
expensive-tests = []
download-archives = []

[dependencies]
anyhow = "1"
async-trait = "0.1.81"
clap = { version = "4", features = ["derive"] }
directories = "5.0.1"
hex = "0.4.3"
ibc-types = "0.12.0"
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite", "postgres", "tls-rustls"] }
tendermint-proto = { version = "0.40.1", default-features = false }
tendermint_v0o34 = { package = "tendermint", version = "0.34.0", default-features = false }
tendermint_v0o40 = { package = "tendermint", version = "0.40.1", default-features = false }
tokio = { version = "1.39.3", features = ["rt"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Namespaced Penumbra versions, so migration modules can run the correct logic for different parts of
# historical chain state. See docs at https://github.com/penumbra-zone/penumbra/blob/main/COMPATIBILITY.md
# v0.79 dependencies; APP_VERSION 7
cnidarium-v0o79 = { package = "cnidarium", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.79.7" }
penumbra-app-v0o79 = { package = "penumbra-app", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.79.7" }
penumbra-ibc-v0o79 = { package = "penumbra-ibc", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.79.7" }
# v0.80 dependencies; APP_VERSION 8
cnidarium-v0o80 = { package = "cnidarium", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.80.13" }
penumbra-app-v0o80 = { package = "penumbra-app", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.80.13" }
penumbra-governance-v0o80 = { package = "penumbra-governance", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.80.13" }
penumbra-ibc-v0o80 = { package = "penumbra-ibc", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.80.13" }
penumbra-sct-v0o80 = { package = "penumbra-sct", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.80.13" }
penumbra-transaction-v0o80 = { package = "penumbra-transaction", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.80.13" }
# v0.81 dependencies; APP_VERSION 9
cnidarium-v0o81 = { package = "cnidarium", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.81.3" }
penumbra-app-v0o81 = { package = "penumbra-app", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.81.3" }
penumbra-governance-v0o81 = { package = "penumbra-governance", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.81.3" }
penumbra-ibc-v0o81 = { package = "penumbra-ibc", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.81.3" }
penumbra-sct-v0o81 = { package = "penumbra-sct", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.81.3" }
penumbra-transaction-v0o81 = { package = "penumbra-transaction", git = "https://github.com/penumbra-zone/penumbra", tag = "v0.81.3" }

# v1.3.x dependencies; also APP_VERSION 9
cnidarium-v1 = { package = "cnidarium", version = "0.83.0" }
penumbra-sdk-app-v1o3 = { package = "penumbra-sdk-app", tag = "v1.3.2", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-governance-v1o3 = { package = "penumbra-sdk-governance", tag = "v1.3.2", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-ibc-v1o3 = { package = "penumbra-sdk-ibc", tag = "v1.3.2", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-sct-v1o3 = { package = "penumbra-sdk-sct", tag = "v1.3.2", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-transaction-v1o3 = { package = "penumbra-sdk-transaction", tag = "v1.3.2", git = "https://github.com/penumbra-zone/penumbra" }

# v1.4.x dependencies; APP_VERSION 10
penumbra-sdk-app-v1o4 = { package = "penumbra-sdk-app", tag = "v1.5.3", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-governance-v1o4 = { package = "penumbra-sdk-governance", tag = "v1.5.3", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-ibc-v1o4 = { package = "penumbra-sdk-ibc", tag = "v1.5.3", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-sct-v1o4 = { package = "penumbra-sdk-sct", tag = "v1.5.3", git = "https://github.com/penumbra-zone/penumbra" }
penumbra-sdk-transaction-v1o4 = { package = "penumbra-sdk-transaction", tag = "v1.5.3", git = "https://github.com/penumbra-zone/penumbra" }

# v2.x dependencies; APP_VERSION 11
# This still depends on cnidarium at version 0.83.0, and cargo will complain
# if we try and add it as a dependency.
penumbra-sdk-app-v2 = { package = "penumbra-sdk-app", git = "https://github.com/penumbra-zone/penumbra", tag = "v2.0.0"}
penumbra-sdk-governance-v2 = { package = "penumbra-sdk-governance", git = "https://github.com/penumbra-zone/penumbra", tag = "v2.0.0"}
penumbra-sdk-ibc-v2 = { package = "penumbra-sdk-ibc", git = "https://github.com/penumbra-zone/penumbra", tag = "v2.0.0"}
penumbra-sdk-sct-v2 = { package = "penumbra-sdk-sct", git = "https://github.com/penumbra-zone/penumbra", tag = "v2.0.0"}
penumbra-sdk-transaction-v2 = { package = "penumbra-sdk-transaction", git = "https://github.com/penumbra-zone/penumbra", tag = "v2.0.0"}

sha2 = { version = "0.10.8", default-features = false }
digest = { version = "0.10.7", default-features = false }
prost = "0.13"
tokio-stream = "0.1.17"
futures-core = "0.3.31"
async-stream = "0.3.6"
reqwest = { version = "0.12.12", features = ["gzip", "json"] }

# config for cargo release
[workspace.metadata.release]
# Instruct cargo-release to increment versions for all packages in the workspace in lockstep.
shared-version = true
# Format spec for the auto-generated git tag, based on new version for release.
tag-name = "v{{version}}"
# The message is required for an annotated tag to be created.
tag-message                = "penumbra-reindexer version {{version}}"
pre-release-commit-message = "chore: release version {{version}}"
# Don't publish to crates.io: we can't, due to git deps.
publish = false
# Do commit, tag, and push the version bump, triggering a new release.
tag = true
# Don't push, since we're still evaluating the new release workflow.
push = false

# In debug builds, nonetheless compile dependencies in release mode, for performance.
#
# The penumbra deps in particular are quit slow in debug mode, but this lets us iterate
# on the code in this crate more rapidly.
[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
assert_cmd = "2.0.16"
escargot = "0.5.13"
flate2 = "1.0.35"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
tar = "0.4.43"
tokio-stream = "0.1.17"
url = "2.5.4"
